# CariSkill

./: .gitignore  README.md  dev.py  package.json  setup.md  setup.py  test_podcastfy_type.py
master_flow/: .dockerignore  .gitignore  Dockerfile  err.txt  macro_planning.log.txt  micro_learning.log.txt  pyproject.toml  requirements.txt  temp_master_flow_output.json  test_podcast.py  test_scraper.py
master_flow/api/: custom_podcast.py  main.py  micro_learning.log.txt  temp_macro_blueprint_final.json  temp_macro_crew_debug.json  temp_master_flow_output.json  video_generator.py
master_flow/data/transcripts/: transcript_0d7057731ac843848bbe97afd8cffffa.txt  transcript_1c0e5a121d9d404b818c9090f10ba303.txt  transcript_4a020bf3925f45a5a8e3675ee45153e0.txt  transcript_4fec3f7c32044b489095790fdfcb5017.txt  transcript_5774c9918ae7455285511a1269d45106.txt  transcript_78aa406317a44c75a92bd825b1cc23b5.txt  transcript_ed831a9ea00c45a5b529fd081f300bc3.txt
master_flow/src/master_flow/: debug.txt  main.py
master_flow/src/master_flow/crews/macro_planning_crew/: macro_crew.py  macro_generator.py
master_flow/src/master_flow/crews/micro_learning_crew/: micro_crew.py  micro_generator.py
master_flow/src/master_flow/crews/micro_learning_crew/config/: micro_agents.yaml  micro_tasks.yaml
master_flow/src/master_flow/model/: micro_models.py  system_state.py
master_flow/src/master_flow/tools/: custom_tools.py  search_tools.py
tmp/: find_demo_data.js
web/: package-lock.json  package.json  reset_demo_quiz.js
web/components/: ContextChatbot.tsx  DailyReviewDropdown.tsx  Navbar.tsx  (+2 more)
(+25 files in other folders)
